--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <img src="./img/logo.png" alt="logo do estabelecimento">
             </a>
         </div>
+        <a href="#home" class="back" title="Inicio">
+            <i class="fas fa-angle-double-up"></i>
+        </a>
         <nav class="container-menu">
             <a href="#" class="menu__container">
                 <i class="menu__bars"></i>
@@ -65,22 +68,22 @@
                 </li>
                 <div class="bars"></div>
                 <li>
-                    <a href="#">
+                    <a href="https://instagram.com/outbackbrasil?igshid=YmMyMTA2M2Y=" target="_blank">
                         <i class="fab fa-instagram"></i></a>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://www.facebook.com/outbackbrasil/?mibextid=ZbWKwL" target="_blank">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://youtube.com/@outbackbr" target="_blank">
                         <i class="fab fa-youtube"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://twitter.com/outbackbrasil" target="_blank">
                         <i class="fab fa-twitter"></i>
                     </a>
                 </li>
@@ -190,7 +193,7 @@
         <section class="restaurantes" id="restaurantes">
             <div class="container-title-restaurantes">
                 <h1 class="restaurantes-title">RESTAURANTES</h1>
-                <img src="/img/header-section.png" alt="imagem de uma loja" class="fundo-restaurantes">
+                <img src="/img/header-section-onde-encontrar.png" alt="imagem de uma loja" class="fundo-restaurantes">
             </div>
             <div class="tudo">
                 <ul class="locais">
@@ -244,7 +247,7 @@
         <section class="fale-conosco" id="fale-conosco">
             <div class="container-title-contatos">
                 <h1 class="contatos-title">FALE CONOSCO</h1>
-                <img src="/img/header-section-.png" alt="Imagem da logo do outback" class="fundo-contatos">
+                <img src="/img/header-section-contatos.png" alt="Imagem da logo do outback" class="fundo-contatos">
             </div>
             <ul class="contato-container">
                 <li class="container-item-contato">
